--- a/config/database.yml
+++ b/config/database.yml
@@ -49,7 +49,9 @@ test:
 # for a full overview on how database connection configuration can be specified.
 #
 production:
-  <<: *default
+  adapter: mysql2
+  encoding: utf8mb4
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   database: otasuke_app_production
   username: otasuke_app
   password: <%= ENV['OTASUKE_APP_DATABASE_PASSWORD'] %>
