チーム作成、詳細、編集、検索機能の実装

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -19,6 +19,9 @@ AllCops:
 AsciiComments:
   Enabled: false
 
+CyclomaticComplexity:
+  Max: 8
+
 Documentation:
   Enabled: false
 
@@ -27,6 +30,9 @@ ClassAndModuleChildren:
 
 Style/FrozenStringLiteralComment:
   Enabled: false
+
+Layout/LineLength:
+  Max: 135
 
 Metrics/BlockLength:
   Exclude:
