--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,7 @@ jobs:
     docker:
       - image: circleci/ruby:2.6.7-node-browsers
         environment:
+          BUNDLER_VERSION: 2.2.29
           RAILS_ENV: test
       - image: circleci/mysql:8.0
         environment:
@@ -16,7 +17,11 @@ jobs:
           keys:
             - v1-dependencies-{{ checksum "Gemfile.lock" }}
             - v1-dependencies-
-      - run: bundle install
+      - run:
+          name: install dependencies
+          command: |
+            gem install bundler -v 2.2.29
+            bundle install
       - save_cache:
           paths:
             - ./vendor/bundle
@@ -41,7 +46,11 @@ jobs:
           keys:
             - v1-dependencies-{{ checksum "Gemfile.lock" }}
             - v1-dependencies-
-      - run: bundle install
+      - run:
+          name: install dependencies
+          command: |
+            gem install bundler -v 2.2.29
+            bundle install
       - save_cache:
           paths:
             - ./vendor/bundle
