--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,35 +1,35 @@
 version: 2
 jobs:
-  rubocop:
-    docker:
-      - image: circleci/ruby:2.6.7-node-browsers
-        environment:
-          BUNDLER_VERSION: 2.2.29
-          RAILS_ENV: test
-      - image: circleci/mysql:8.0
-        environment:
-          MYSQL_ALLOW_EMPTY_PASSWORD: 'true'
-          MYSQL_ROOT_HOST: '%'
-    working_directory: ~/repo
-    steps:
-      - checkout
-      - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "Gemfile.lock" }}
-            - v1-dependencies-
-      - run:
-          name: install dependencies
-          command: |
-            gem install bundler -v 2.2.29
-            bundle install
-      - save_cache:
-          paths:
-            - ./vendor/bundle
-          key: v1-dependencies-{{ checksum "Gemfile.lock" }}
-      # Rubocop
-      - run:
-          name: Rubocop
-          command: bundle exec rubocop
+  # rubocop:
+  #   docker:
+  #     - image: circleci/ruby:2.6.7-node-browsers
+  #       environment:
+  #         BUNDLER_VERSION: 2.2.29
+  #         RAILS_ENV: test
+  #     - image: circleci/mysql:8.0
+  #       environment:
+  #         MYSQL_ALLOW_EMPTY_PASSWORD: 'true'
+  #         MYSQL_ROOT_HOST: '%'
+  #   working_directory: ~/repo
+  #   steps:
+  #     - checkout
+  #     - restore_cache:
+  #         keys:
+  #           - v1-dependencies-{{ checksum "Gemfile.lock" }}
+  #           - v1-dependencies-
+  #     - run:
+  #         name: install dependencies
+  #         command: |
+  #           gem install bundler -v 2.2.29
+  #           bundle install
+  #     - save_cache:
+  #         paths:
+  #           - ./vendor/bundle
+  #         key: v1-dependencies-{{ checksum "Gemfile.lock" }}
+  #     # Rubocop
+  #     - run:
+  #         name: Rubocop
+  #         command: bundle exec rubocop
   rspec:
     docker:
       - image: circleci/ruby:2.6.7-node-browsers
