--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,9 +29,9 @@ jobs:
       - run: mv config/database.yml.ci config/database.yml 
       - run: bundle exec rails db:create
       - run: bundle exec rails db:schema:load
-      # - run:
-      #     name: Rubocop
-      #     command: bundle exec rubocop
+      - run:
+          name: Rubocop
+          command: bundle exec rubocop
       - run:
           name: run tests
           command: |
