Circleci/config.ymlにcapistranoデプロイコマンド記述

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,3 +52,6 @@ jobs:
       - add_ssh_keys:
           fingerprints:
             - "d1:a6:10:29:3b:18:cc:52:5d:db:6b:70:3c:e8:bb:ac"
+      - deploy:
+          name: Capistrano deploy
+          command: bundle exec cap production deploy
