CircleCIからCapistranoでデプロイ設定

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,4 +54,6 @@ jobs:
             - "67:c9:b4:b2:14:ab:6b:c0:92:8d:22:25:d3:95:8a:d6"
       - deploy:
           name: Capistrano deploy
+          command: |
+            echo $PRODUCTION_SSH_KEY
           command: bundle exec cap production deploy
