--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,4 +54,5 @@ jobs:
             - "67:c9:b4:b2:14:ab:6b:c0:92:8d:22:25:d3:95:8a:d6"            
       - deploy:
           name: Capistrano deploy
-          command: bundle exec cap production deploy
+          command: |
+          bundle exec cap production deploy
