--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,5 +55,4 @@ jobs:
       - deploy:
           name: Capistrano deploy
           command: |
-            # bundle exec cap production deploy
-            ssh kosuke@13.114.166.139
+            bundle exec cap production deploy
