--- a/config/database.yml
+++ b/config/database.yml
@@ -15,7 +15,7 @@ default: &default
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   password: <%= ENV['DB_PASSWORD'] %>
   socket: /tmp/mysql.sock
-  # host: db
+  host: db
 
 development:
   <<: *default
