--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,10 @@ services:
   db:
     image: mysql:8.0
     environment:
-      DB_PASSWORD: ${DB_PASSWORD}
+      MYSQL_DATABASE: otasuke_app_development
+      MYSQL_ROOT_PASSWORD: password
     ports:
-      - '3307:3306'
+      - '3306:3306'
     command: --default-authentication-plugin=mysql_native_password
     volumes:
       - mysql-data:/var/lib/mysql
@@ -16,7 +17,10 @@ services:
     volumes:
       - .:/myapp
     environment:
-      DB_PASSWORD: ${DB_PASSWORD}
+      DB_HOST: db
+      DB_USERNAME: root
+      DB_PASSWORD: password
+      RAILS_ENV: development
     ports:
       - "3000:3000"
     depends_on:
